fix overflow

--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -8,7 +8,6 @@
   min-height: 100vh;
   display: flex;
   justify-content: space-around;
-  width: 100vw;
   padding: 3em .2em;
 
 }
